--- a/Client/src/components/Cards/Cards.module.css
+++ b/Client/src/components/Cards/Cards.module.css
@@ -3,4 +3,5 @@
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-auto-rows: minmax(0, auto);
   grid-gap: 10px;
+ margin: 24px;
 }
